crates/ir/tests/snapshots/lower_test__stdlib__list_sort_by.snap
---
source: crates/ir/tests/lower_test.rs
assertion_line: 67
expression: ir_module.to_string()
---
module stdlib__list_sort_by

declare println: (m) -> Unit
declare sort_by: (Dict, List[v5], (v5) -> k5) -> List[v5]

fn main() -> Unit =
  let v0: ~List[Int] = construct List::Nil#1()
  let v1: ~List[Int] = construct List::Cons#0(2, v0)
  let v2: ~List[Int] = construct List::Cons#0(1, v1)
  let v3: ~List[Int] = construct List::Cons#0(3, v2)
  let v5: (Int) -> Int = make_closure(lambda$48, [])
  let v6: Dict = get_dict Ord[Int]
  let v7: List[Int] = call sort_by(v6, v3, v5)
  switch v7 {
    0 (v8: a, v9: List[a]) ->
      let v10: Unit = call println(v8)
      v10
    1 ->
      let v11: Unit = call println(0)
      v11
  }

fn lambda$48(v4: Int) -> Int =
  v4
